test/e2e/testdata/listenerset-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listener-httproute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    namespace: gateway-conformance-infra
    name: listener-set-http
    sectionName: extra-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /listener
    backendRefs:
    - name: infra-backend-v1
      port: 8080
